Update and rename Prep1.html to index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <form>
+    <form>
         <label for="Firstname" >Firstname: </label></br>
         <input type="text" id="Firstname" name="FirstName">
         <input type="submit">
@@ -19,7 +19,7 @@
 <input type="checkbox" id="vehicle1" name="Trucky" >
 <label for="vehicle1" >Trucky</label>
 
-    </form> -->
+    </form>
 
 </head>
 
